@@ -1,3 +1,7 @@
+2003-04-03  Ryan Yeske  <rcyeske@vcn.bc.ca>
+
+	* nethack-keys.el (nh-map-mode-map): Don't map M-[.
+
 2003-03-28  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
 	* INSTALL: Update nethack version references (to 3.4.1).
